<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.dii.polytech.vironmetre.DeviceControl"
    tools:showIn="@layout/activity_device_control">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_control_selected_device"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/DeviceControl_TextViewSelectedDeviceName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_control_connection_state"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/DeviceControl_TextViewConnectionState"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_control_sensor"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/DeviceControl_TextViewSensorName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"/>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray"
            android:layout_marginTop="@dimen/activity_vertical_margin"/>

        <ViewFlipper xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/DeviceControl_ViewFlipper"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <include
                android:id="@+id/DeviceControl_NoSensor"
                layout="@layout/sensor_no_sensor"/>

            <include
                android:id="@+id/DeviceControl_SensorADXL345"
                layout="@layout/sensor_adxl345"/>

            <include android:id="@+id/DeviceControl_SensorBMP085"
                layout="@layout/sensor_bmp085" />

            <include
                android:id="@+id/DeviceControl_SensorHMC5883L"
                layout="@layout/sensor_hmc5883l"/>

            <include
                android:id="@+id/DeviceControl_SensorTCS3414CS"
                layout="@layout/sensor_tcs3414cs"/>

            <include android:id="@+id/DeviceControl_SensorTSL2561"
                layout="@layout/sensor_tsl2561"/>

        </ViewFlipper>

    </LinearLayout>

</RelativeLayout>
